SearchBar and Search Button Alignment Issues has been fixed

--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -3,5 +3,7 @@
     justify-content: center;
     flex-direction: row;
     background-color:#22272E;
+    margin-top: 25px;
+    margin-bottom: 20px;
 }
 
